# atlas-docs

./: .gitignore  Makefile  README.md  index.rst
.github/: docs-config.yml
.github/workflows/: docs.yml
content/: about.rst  contact.rst  design.rst  documentation.rst  getting_started.rst  index.rst  introduction.rst  tools.rst
content/design/: grid.rst  interpolation.rst  mesh.rst  object_oriented.rst  output_and_visualisation.rst  partitioner.rst  plugin_architecture.rst
content/design/img/: cpp_pimpl.graffle  uml.graffle
content/ecbuild_project_atlas/: CMakeLists.txt
content/getting_started/: install_ecbuild.rst  install_eckit.rst  install_fckit.rst  install_transi.rst  installation.rst  linking-backup.rst  linking.rst  quick_start.rst
content/getting_started/project_bundle_atlas/: CMakeLists.txt
content/getting_started/project_bundle_atlas/src/: hello-atlas.cc  hello-atlas_f.F90
content/img/: dependency_graph.graffle
content/project_bundle_atlas/src/: hello-atlas.cc  hello-atlas_f.F90
content/tools/: atlas-gaussian-latitudes.rst  atlas-grids.rst  atlas-interpolation.rst  atlas-meshgen.rst
doxygen/: Doxyfile-custom  Doxyfile-mcss
pelican/: m.css  pelicanconf.py  publishconf.py
scripts/: generate_doxyfile.py  generate_doxygen.py  publish.py  publish.sh  setup.sh
scripts/doxygen/: Doxyfile-custom
scripts/pelican/: pelicanconf.py  publishconf.py
